force-app/main/default/objects/My_Event__c/My_Event__c.object-meta.xml
<CustomObject>
    <description>일정 정보 저장용 오브젝트</description>
    <label>My Event</label>
    <nameField>
        <label>Event Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MyEvents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>