force-app/main/default/objects/My_Event__c/fields/End_DateTime__c.field-meta.xml
<CustomField>
    <fullName>End_DateTime__c</fullName>
    <description>이벤트 종료 일시</description>
    <label>End DateTime</label>
    <type>DateTime</type>
</CustomField>