force-app/main/default/objects/My_Event__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <description>이벤트 장소</description>
    <label>Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>