force-app/main/default/objects/My_Event__c/fields/Related_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Related_Record_Id__c</fullName>
    <description>드래그한 Salesforce 레코드의 ID (예: Account, Contact)</description>
    <label>Related Record Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>