force-app/main/default/objects/My_Event__c/fields/Related_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Related_Record_Type__c</fullName>
    <description>연결된 객체 유형</description>
    <label>Related Record Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Account</fullName>
            </value>
            <value>
                <fullName>Contact</fullName>
            </value>
            <value>
                <fullName>Opportunity</fullName>
            </value>
            <value>
                <fullName>Personal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>