force-app/main/default/objects/My_Event__c/fields/Start_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Start_DateTime__c</fullName>
    <description>이벤트 시작 일시</description>
    <label>Start DateTime</label>
    <type>DateTime</type>
</CustomField>