force-app/main/default/objects/My_Event__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <description>이벤트 제목 (예: oo회사와 미팅 등)</description>
    <label>Title</label>
    <length>80</length>
    <type>Text</type>
</CustomField>